#- * - python - * -

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_library(
    name = "vtk_parser",
    hdrs =
        [
            "vtk_parser.h",
        ],
    deps =
        [
            "//common:essential",
        ],
)

drake_cc_library(
    name = "fem_system",
    hdrs =
        [
            "fem_system.h",
        ],
    deps =
        [
            ":vtk_parser",
            "//common:essential",
            "//systems/framework:leaf_system",
        ],
)

drake_cc_library(
    name = "obj_writer",
    hdrs =
        [
            "obj_writer.h",
        ],
    deps =
        [
            ":fem_system",
            "//common:essential",
            "//systems/framework:leaf_system",
        ],
)

drake_cc_binary(
    name = "run_pancake",
    srcs =
        [
            "run_pancake.cc",
        ],
    deps =
        [
            ":fem_system",
            ":obj_writer",
            "//common:add_text_logging_gflags",
            "//common:find_resource",
            "//systems/analysis:simulator_gflags",
            "//systems/framework:diagram_builder",
        ],
)

add_lint_tests()
