#- * - python - * -
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_library",
)

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "softsim_base",
    srcs = [
        "softsim_base.cc",
    ],
    hdrs = [
        "softsim_base.h",
    ],
    deps = [
        "//geometry:geometry_ids",
        "//geometry:shape_specification",
        "//multibody/contact_solvers:contact_solver",
        "//multibody/plant:multibody_plant_softsim_attorney",
        "//systems/framework:context",
    ],
)

add_lint_tests()
