# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

# The purpose of default_visibility to be private is to be able to develop this
# code on master, but without yet exposing it to users until we're sure it is
# API-stable. Furthermore, the code in this directory is meant for advanced
# developers working on contact solvers.
drake_cc_package_library(
    name = "solvers",
    visibility = ["//visibility:public"],
    deps = [
        ":linear_operator",
        ":sparse_linear_operator",
    ],
)

drake_cc_library(
    name = "linear_operator",
    srcs = ["linear_operator.cc"],
    hdrs = ["linear_operator.h"],
    deps = [
        "//common:default_scalars",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "sparse_linear_operator",
    srcs = ["sparse_linear_operator.cc"],
    hdrs = ["sparse_linear_operator.h"],
    deps = [
        ":linear_operator",
        "//common:default_scalars",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "inverse_operator",
    srcs = ["inverse_operator.cc"],
    hdrs = ["inverse_operator.h"],
    deps = [
        ":linear_operator",
        "//common:default_scalars",
        "//common:essential",
        "//fem:linear_system_solver",
    ],
)

drake_cc_library(
    name = "contact_solver",
    srcs = [],
    hdrs = ["contact_solver.h"],
    copts = [
        "-Wno-error=unused-parameter",
        "-Wno-error=unused-variable",
    ],
    deps = [
        ":point_contact_data",
        ":system_dynamics_data",
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "contact_solver_utils",
    srcs = [],
    hdrs = ["contact_solver_utils.h"],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "pgs_solver",
    srcs = ["pgs_solver.cc"],
    hdrs = ["pgs_solver.h"],
    copts = [
        "-Wno-error=unused-parameter",
        "-Wno-error=unused-variable",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":contact_solver",
        ":contact_solver_utils",
        ":point_contact_data",
        ":system_dynamics_data",
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "system_dynamics_data",
    srcs = ["system_dynamics_data.cc"],
    hdrs = ["system_dynamics_data.h"],
    copts = [
        "-Wno-error=unused-parameter",
        "-Wno-error=unused-variable",
    ],
    deps = [
        ":linear_operator",
        "//common:default_scalars",
    ],
)

drake_cc_library(
    name = "point_contact_data",
    srcs = [],
    hdrs = ["point_contact_data.h"],
    copts = [
        "-Wno-error=unused-parameter",
        "-Wno-error=unused-variable",
    ],
    deps = [
        ":linear_operator",
        "//common:default_scalars",
    ],
)

drake_cc_googletest(
    name = "linear_operator_test",
    deps = [
        ":linear_operator",
        "//common/test_utilities:expect_throws_message",
    ],
)

drake_cc_googletest(
    name = "sparse_linear_operator_test",
    deps = [
        ":sparse_linear_operator",
    ],
)

drake_cc_googletest(
    name = "pgs_test",
    deps = [
        ":pgs_solver",
        ":point_contact_data",
        ":sparse_linear_operator",
        ":system_dynamics_data",
    ],
)

add_lint_tests()
